Integrate RFP to RSEF

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,8 @@ install_requires =
     python-Levenshtein
     click
     pdftitle
+    transformers
+    torch
 
 [options.packages.find]
 where = src
