RSEF-45: Dependency update

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ include_package_data = True
 python_requires = >= 3.9.0
 install_requires =
     somef >= 0.9.4
+    elementpath==4.0.0
     arxiv   
     bibtexparser
     fuzzywuzzy
